--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
     "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "aos": "^2.3.4",
+    "npm": "^10.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.1",
+    "@angular-devkit/build-angular": "^17.2.2",
     "@angular/cli": "^17.0.1",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/localize": "^17.0.0",
